--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -64,20 +64,11 @@
     <Filter Include="Source Files\Lights">
       <UniqueIdentifier>{c6201f08-c05e-4752-bcca-c765cbe2881c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\CommonTool">
-      <UniqueIdentifier>{843a03ae-79d1-4d17-a603-f3ea4108e407}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\CommonTool">
       <UniqueIdentifier>{222c260f-d34a-4644-ac9c-9a24ed43e06c}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source Files\ECS">
       <UniqueIdentifier>{b88cf7c6-cec5-4299-b7b8-fd01972cee40}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\CommonTool\imgui">
-      <UniqueIdentifier>{61b44ed0-4620-4934-8f4c-bfc62f217c24}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\CommonTool\Macros">
-      <UniqueIdentifier>{12714e1a-204f-4931-a322-e71f40883252}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files\ECS\Component">
       <UniqueIdentifier>{9ed497bc-7b66-4eff-b325-8cafa200e11f}</UniqueIdentifier>
@@ -87,6 +78,15 @@
     </Filter>
     <Filter Include="Shader\PS">
       <UniqueIdentifier>{fe8eab05-4d14-41fe-912c-d81d7a9f31d0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Bindable\CommonTool">
+      <UniqueIdentifier>{843a03ae-79d1-4d17-a603-f3ea4108e407}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Bindable\CommonTool\imgui">
+      <UniqueIdentifier>{61b44ed0-4620-4934-8f4c-bfc62f217c24}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Bindable\CommonTool\Macros">
+      <UniqueIdentifier>{12714e1a-204f-4931-a322-e71f40883252}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -133,22 +133,22 @@
       <Filter>Source Files\Binable</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui.cpp">
-      <Filter>Header Files\CommonTool\imgui</Filter>
+      <Filter>Header Files\Bindable\CommonTool\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_demo.cpp">
-      <Filter>Header Files\CommonTool\imgui</Filter>
+      <Filter>Header Files\Bindable\CommonTool\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_draw.cpp">
-      <Filter>Header Files\CommonTool\imgui</Filter>
+      <Filter>Header Files\Bindable\CommonTool\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_impl_dx11.cpp">
-      <Filter>Header Files\CommonTool\imgui</Filter>
+      <Filter>Header Files\Bindable\CommonTool\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_impl_win32.cpp">
-      <Filter>Header Files\CommonTool\imgui</Filter>
+      <Filter>Header Files\Bindable\CommonTool\imgui</Filter>
     </ClCompile>
     <ClCompile Include="imgui\imgui_widgets.cpp">
-      <Filter>Header Files\CommonTool\imgui</Filter>
+      <Filter>Header Files\Bindable\CommonTool\imgui</Filter>
     </ClCompile>
     <ClCompile Include="Camera.cpp">
       <Filter>Source Files</Filter>
@@ -309,10 +309,10 @@
       <Filter>Dxerr</Filter>
     </ClInclude>
     <ClInclude Include="GraphicsThrowMacros.h">
-      <Filter>Header Files\CommonTool\Macros</Filter>
+      <Filter>Header Files\Bindable\CommonTool\Macros</Filter>
     </ClInclude>
     <ClInclude Include="WindowsThrowMacros.h">
-      <Filter>Header Files\CommonTool\Macros</Filter>
+      <Filter>Header Files\Bindable\CommonTool\Macros</Filter>
     </ClInclude>
     <ClInclude Include="Bindable.h">
       <Filter>Header Files\Bindable</Filter>
@@ -369,28 +369,28 @@
       <Filter>Header Files\Bindable</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imconfig.h">
-      <Filter>Header Files\CommonTool\imgui</Filter>
+      <Filter>Header Files\Bindable\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui.h">
-      <Filter>Header Files\CommonTool\imgui</Filter>
+      <Filter>Header Files\Bindable\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui_impl_dx11.h">
-      <Filter>Header Files\CommonTool\imgui</Filter>
+      <Filter>Header Files\Bindable\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui_impl_win32.h">
-      <Filter>Header Files\CommonTool\imgui</Filter>
+      <Filter>Header Files\Bindable\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imgui_internal.h">
-      <Filter>Header Files\CommonTool\imgui</Filter>
+      <Filter>Header Files\Bindable\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_rectpack.h">
-      <Filter>Header Files\CommonTool\imgui</Filter>
+      <Filter>Header Files\Bindable\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_textedit.h">
-      <Filter>Header Files\CommonTool\imgui</Filter>
+      <Filter>Header Files\Bindable\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="imgui\imstb_truetype.h">
-      <Filter>Header Files\CommonTool\imgui</Filter>
+      <Filter>Header Files\Bindable\CommonTool\imgui</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
@@ -474,22 +474,22 @@
       <Filter>Header Files\Scenes</Filter>
     </ClInclude>
     <ClInclude Include="BaseException.h">
-      <Filter>Header Files\CommonTool</Filter>
+      <Filter>Header Files\Bindable\CommonTool</Filter>
     </ClInclude>
     <ClInclude Include="ConditionalNoexcept.h">
-      <Filter>Header Files\CommonTool</Filter>
+      <Filter>Header Files\Bindable\CommonTool</Filter>
     </ClInclude>
     <ClInclude Include="DxgiInfoManager.h">
-      <Filter>Header Files\CommonTool</Filter>
+      <Filter>Header Files\Bindable\CommonTool</Filter>
     </ClInclude>
     <ClInclude Include="MathHelper.h">
-      <Filter>Header Files\CommonTool</Filter>
+      <Filter>Header Files\Bindable\CommonTool</Filter>
     </ClInclude>
     <ClInclude Include="StringHelper.h">
-      <Filter>Header Files\CommonTool</Filter>
+      <Filter>Header Files\Bindable\CommonTool</Filter>
     </ClInclude>
     <ClInclude Include="WindowHelper.h">
-      <Filter>Header Files\CommonTool</Filter>
+      <Filter>Header Files\Bindable\CommonTool</Filter>
     </ClInclude>
     <ClInclude Include="Grid.h">
       <Filter>Header Files\Geometry</Filter>
@@ -501,10 +501,10 @@
       <Filter>Header Files\Drawable</Filter>
     </ClInclude>
     <ClInclude Include="CpuClass.h">
-      <Filter>Header Files\CommonTool</Filter>
+      <Filter>Header Files\Bindable\CommonTool</Filter>
     </ClInclude>
     <ClInclude Include="DirectXMathHelper.h">
-      <Filter>Header Files\CommonTool</Filter>
+      <Filter>Header Files\Bindable\CommonTool</Filter>
     </ClInclude>
     <ClInclude Include="CerTest.h">
       <Filter>Header Files</Filter>
@@ -519,7 +519,7 @@
       <Filter>Header Files\ECS</Filter>
     </ClInclude>
     <ClInclude Include="Common.hpp">
-      <Filter>Header Files\CommonTool</Filter>
+      <Filter>Header Files\Bindable\CommonTool</Filter>
     </ClInclude>
     <ClInclude Include="Component.h">
       <Filter>Header Files\ECS\Component</Filter>
@@ -531,7 +531,7 @@
       <Filter>Header Files\Bindable</Filter>
     </ClInclude>
     <ClInclude Include="ImguiManager.h">
-      <Filter>Header Files\CommonTool</Filter>
+      <Filter>Header Files\Bindable\CommonTool</Filter>
     </ClInclude>
     <ClInclude Include="LightCommon.h">
       <Filter>Header Files\Lights</Filter>
@@ -543,7 +543,7 @@
       <Filter>Header Files\Drawable</Filter>
     </ClInclude>
     <ClInclude Include="d3dUtil.h">
-      <Filter>Header Files\CommonTool</Filter>
+      <Filter>Header Files\Bindable\CommonTool</Filter>
     </ClInclude>
     <ClInclude Include="Waves.h">
       <Filter>Header Files\Drawable</Filter>
@@ -558,7 +558,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TexturePreprocessor.h">
-      <Filter>Header Files\CommonTool</Filter>
+      <Filter>Header Files\Bindable\CommonTool</Filter>
     </ClInclude>
     <ClInclude Include="GameObject3D.h">
       <Filter>Header Files\Drawable</Filter>
