--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -19,7 +19,7 @@ Size=357,97
 Collapsed=0
 
 [Window][Camera]
-Pos=1314,373
+Pos=1188,24
 Size=262,222
 Collapsed=0
 
@@ -74,9 +74,9 @@ Size=303,372
 Collapsed=0
 
 [Window][Cube]
-Pos=1311,561
+Pos=1315,400
 Size=279,314
-Collapsed=1
+Collapsed=0
 
 [Window][Minecraft 1]
 Pos=-8,346
@@ -134,8 +134,8 @@ Size=276,158
 Collapsed=0
 
 [Window][Game State]
-Pos=1008,19
-Size=300,111
+Pos=1,20
+Size=340,159
 Collapsed=0
 
 [Window][Grid]
@@ -166,5 +166,10 @@ Collapsed=1
 [Window][Role]
 Pos=-29,551
 Size=261,172
+Collapsed=0
+
+[Window][PointLight]
+Pos=1439,25
+Size=145,312
 Collapsed=0
 
