--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -19,13 +19,13 @@ Size=357,97
 Collapsed=0
 
 [Window][Camera]
-Pos=1103,19
+Pos=1218,58
 Size=246,222
 Collapsed=1
 
 [Window][Light]
-Pos=1311,18
-Size=288,351
+Pos=28,236
+Size=290,90
 Collapsed=0
 
 [Window][Boxes]
@@ -74,7 +74,7 @@ Size=303,372
 Collapsed=0
 
 [Window][Cube]
-Pos=1315,400
+Pos=1301,550
 Size=279,314
 Collapsed=0
 
@@ -134,12 +134,12 @@ Size=276,158
 Collapsed=0
 
 [Window][Game State]
-Pos=1,20
-Size=340,159
+Pos=26,27
+Size=340,179
 Collapsed=0
 
 [Window][Grid]
-Pos=1312,379
+Pos=1307,201
 Size=280,352
 Collapsed=0
 
@@ -171,5 +171,20 @@ Collapsed=0
 [Window][PointLight]
 Pos=1347,23
 Size=233,347
+Collapsed=0
+
+[Window][SpotLight1]
+Pos=378,101
+Size=326,469
+Collapsed=0
+
+[Window][PointLight1]
+Pos=380,91
+Size=159,335
+Collapsed=0
+
+[Window][DirectionLight1]
+Pos=60,60
+Size=432,290
 Collapsed=0
 
