--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -174,8 +174,8 @@ Size=233,347
 Collapsed=0
 
 [Window][SpotLight1]
-Pos=23,360
-Size=326,429
+Pos=23,361
+Size=365,497
 Collapsed=0
 
 [Window][PointLight1]
@@ -186,5 +186,15 @@ Collapsed=0
 [Window][DirectionLight1]
 Pos=33,401
 Size=432,290
+Collapsed=0
+
+[Window][PointLight2]
+Pos=24,367
+Size=159,335
+Collapsed=0
+
+[Window][SpotLight2]
+Pos=45,355
+Size=517,451
 Collapsed=0
 
